--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "marvel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://glushach.github.io/marvel",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -14,6 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "prop-types": "^15.8.1",
     "sass": "^1.38.0"
   }
 }
